[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gitpython>=3.1.45",
    "gunicorn>=23.0.0",
    "openai>=1.99.3",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "stripe>=12.4.0",
    "telegram>=0.0.1",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.6",
    "trafilatura>=2.0.0",
    "selenium>=4.34.2",
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "anthropic>=0.62.0",
]
